012 add cookies/policy

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -139,7 +139,8 @@
         "col3Adress": "ul. Rozbrat 34/36, 00-429 Warszawa",
         "col3Map": "See on the map",
         "col4Media": "Follow our activities",
-        "bottomInfo": "information obligation"
+        "bottomInfo": "information obligation",
+        "politics": "Privacy policy"
     },
     "button": {
         "instagram": "Get to know our projects"
