14 - make pixel-perfect UI

--- a/i18n/pl.json
+++ b/i18n/pl.json
@@ -42,7 +42,7 @@
     "process.check3": "PL Lorem Ipsum dolor sit amet, consectur adispiscing elit.",
     "process.check4": "PL Adipiscing dolor adipsicing sit amet disciping elit conestur.",
     "button.instagram": "Poznaj nasze realizacje",
-    "consultation.header": "Zapraszamy na darmową konsultacje",
+    "consultation.header": "Zapraszamy na \n darmową konsultacje",
     "consultation.button": "Konsultacja",
     "interior.s1.header": "Wnętrza",
     "interior.s1.info": "PL Lorem ipsum dolor sit am dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame dolor sit am dolor sit am dolor sit ame",
