--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -13,7 +13,7 @@
     "about": {
         "header": "Stawiamy na współpracę",
         "info": "Szanujemy budżet i czas naszych klientów. Przeprowadzimy Cię krok po kroku przez zaplanowany przez nas starannie proces projektowy. Dbamy o dobrą komunikację.",
-        "button": "Więcej o nas"
+        "button": "Poznaj nas"
     },
     "section3": {
         "header": "Jesteśmy gotowi ponieść cenę piękna",
@@ -62,7 +62,6 @@
         "header": "Zapraszamy na darmową konsultacje",
         "button": "Umów się",
         "info": "W czasie 30 minut porozmawiamy o twoich wyzwaniach i poszukamy wstępnych rozwiązań",
-        "info2": "Oferujemy kompleksowe wsparcie i profesjonalne doradztwo przy planowaniu i aranżacji przestrzeni mieszkalnych, biurowych, handlowych oraz usługowych. Nasz zespół składa się z wysoko wykwalifikowanych architektów, projektantów oraz stylistów wnętrz.",
         "info2": "Oferujemy kompleksowe wsparcie i profesjonalne doradztwo przy planowaniu i aranżacji przestrzeni mieszkalnych, biurowych, handlowych oraz usługowych. Nasz zespół składa się z wysoko wykwalifikowanych architektów, projektantów oraz stylistów wnętrz."
     },
     "realisation": {
