001 add first section and testimonials

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -3,5 +3,10 @@
         "navA": "Who we are",
         "navB": "Offer",
         "navC": "Contact"
+       },
+       "pizzaHamburgerMenu": {
+        "navA": "Who we are",
+        "navB": "Offer",
+        "navC": "Contact"
        }
 }
