--- a/public/locales/pl/common.json
+++ b/public/locales/pl/common.json
@@ -3,5 +3,10 @@
         "navA": "Kim Jesteśmy",
         "navB": "Oferta",
         "navC": "Kontakt"
+       },
+       "pizzaHamburgerMenu": {
+        "navA": "Kim Jesteśmy",
+        "navB": "Oferta",
+        "navC": "Kontakt"
        }
 }
